--- a/webconf_tw_2023/1001/0811-1155.md
+++ b/webconf_tw_2023/1001/0811-1155.md
@@ -1,3 +1,7 @@
+<!--HugoNoteFlag-->
+
+---
+
 ## Zend Engine
 
 * Php is actually calling C API
@@ -8,6 +12,27 @@
     * Bigger size
     * have to compile in different platform
     * Didn't resolve `source code encryption`
+* box
+  * https://github.com/hyperf/box
+* Native PHP
+  * https://nativephp.com/
+
+---
+
+<!--HugoNoteZhFlag-->
+
+# Translated by ChatGTP
+
+## Zend Engine
+
+* PHP 實際上是調用 C API 的。
+* PHP SAPI 模塊。
+* Micro SAPI
+  * https://github.com/easysoft/phpmicro
+  * 缺點
+    * 佔用更多空間
+    * 必須在不同平台上編譯
+    * 沒有解決 "源代碼加密" 問題。
 * box
   * https://github.com/hyperf/box
 * Native PHP
